tests/baselines/reference/recursiveExportAssignmentAndFindAliasedType5.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
recursiveExportAssignmentAndFindAliasedType5_moduleD.ts(1,1): error TS2303: Circular definition of import alias 'self'.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== recursiveExportAssignmentAndFindAliasedType5_moduleA.ts (0 errors) ====
    import moduleC = require("recursiveExportAssignmentAndFindAliasedType5_moduleC");
    import ClassB = require("recursiveExportAssignmentAndFindAliasedType5_moduleB");
    export var b: ClassB; // This should result in type ClassB
==== recursiveExportAssignmentAndFindAliasedType5_moduleC.ts (0 errors) ====
    import self = require("recursiveExportAssignmentAndFindAliasedType5_moduleD");
    export = self;
    
==== recursiveExportAssignmentAndFindAliasedType5_moduleD.ts (1 errors) ====
    import self = require("recursiveExportAssignmentAndFindAliasedType5_moduleC");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'self'.
    export = self;
    
==== recursiveExportAssignmentAndFindAliasedType5_moduleB.ts (0 errors) ====
    class ClassB { }
    export = ClassB;
    